# rust-api

./: .gitignore  Cargo.toml  Dockerfile  README.MD  Scarb.toml  docker-compose.yml  q_aware_model.tflite
migrations/2023-07-06-222841_mining_pool_api/: up.sql
src/: lib.cairo  main.rs  miner.rs  miner_controller.rs  nn.cairo  test.cairo  upload.rs  util.rs  wallet.rs  wallet_controller.rs
src/python/: generateCairo.py  requirements.txt
