[package]
name = "api-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
# actix-web = "4.0.0-beta.8"
futures = "0.3"
actix-multipart= "0.3"
zip = "0.5"
env_logger = "0.7.1"
serde = "1.0.106"
serde_json = "1.0.51"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"]}
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rand = "0.8.4"
regex = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }